# sentiric-stt-whisper-service

./: .context.md  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.gpu  LOGIC.md  Makefile  README.md  SETUP.md  TASK.md  dependency-management.md  docker-compose.cpu.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml  e2e-test.sh  grpc_test_client.py  pyproject.toml  requirements-simple.txt  requirements.gpu.txt  requirements.txt  todo.MD  vcpkg.json
.github/workflows/: build-and-push.yml  docker-cpu.yml  docker-gpu.yml  docker-publish.yml  docker-publish.yml.backup
app/: main.py  runner.py
app/api/v1/: endpoints.py
app/core/: config.py  logging.py
app/services/: grpc_server.py  whisper_service.py
docs/: API_REFERENCE.md  FEATURES.md  PROJECT_IDENTITY.md  TASKS.md
docs/KB/: 04_WHISPER_CPP_UPGRADE_RESEARCH.md  05_WHISPER_CPP_V1_8_2_API.md
docs/architecture/: DECISION_LOG.md  SYSTEM_ARCHITECTURE.md
docs/guides/: 03_CONFIGURATION.md
scripts/: download_models.sh
src/: config.h  grpc_server.cpp  grpc_server.h  http_server.cpp  http_server.h  main.cpp  model_manager.cpp  model_manager.h  prosody_extractor.cpp  prosody_extractor.h  speaker_cluster.cpp  speaker_cluster.h  stt_engine.cpp  stt_engine.h  suts_logger.h  utils.h
src/cli/: audio_client.cpp  audio_client.h  main.cpp
studio/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_basic.py  test_config.py  test_config_simple.py  test_endpoints.py  test_health.py  test_health_simple.py  test_minimal.py  test_whisper_service.py
